<resources>
    <string name="app_name">Don\'t Sleep!</string>
    <string name="tile_name">Keep Awake</string>
    <string name="don_t_sleep_timer">Don\'t Sleep! Timer</string>
    <string name="status">Status</string>
    <string name="timeout">Timeout</string>
    <string name="hours_minutes">(Hours, Minutes)</string>
    <string name="sleep_timer">Sleep! Timer</string>
    <string name="help">Help</string>
    <string name="get_started">Get Started</string>
    <string name="sleep_timer_label">Sleep Timer</string>
    <string name="close">Close</string>
    <string name="timeout_notification_text">Keeping device awake until %s.</string>
    <string name="timeout_notification_indefinite_text">Keeping device awake.</string>
    <string name="sleep_notification_text">"Turning screen off at %s.</string>
    <string name="media_timeout_notification_text">"Pausing media playback at %s.</string>
    <string name="media_timeout_notification_indefinite_text">Media timer running.</string>
    <string name="tile_subtitle_until">Until %1$s</string>
    <string name="special_permission_grant_title">Special Permission Grant</string>
    <string name="special_permission_grant_body">In order to use this feature, you must grant a special permission to the application.\nThis permission allows the application to turn off your screen.\n\nDo you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="revoke_permission_extra">You can revoke the permission from this dialog in order to uninstall the application.</string>
    <string name="revoke_admin_permission">Revoke Admin Permission</string>
    <string name="warning">WARNING</string>
    <string name="special_permission_grant_warning_body">You will not be able to uninstall the application until you revoke the administrator permission.\nYou can revoke the permission by clicking the \'Help\' button from the \'Sleep! Timer\' section of the app.\n\nDo you want to continue?</string>
    <string name="stop">Stop</string>
    <string name="media_timeout_help_description">This feature allows you to set a timer which will pause any media playing on the device, such as music or video playback.</string>
    <string name="wakelock_help_title">Don\'t Sleep! Help</string>
    <string name="wakelock_help_description">This feature enables you to turn off your screen timeout with the click of a button.</string>
    <string name="revoke_permission_description">\nYou can revoke the draw over permission from this dialog.</string>
    <string name="revoke_draw_over_permission">Revoke Draw Over Permission</string>
    <string name="don_t_sleep">Don\'t Sleep!</string>
    <string name="draw_over_permission_title">Draw Over Permission Grant</string>
    <string name="draw_over_permission_description">Due to limitations from the manufacturer of your device, in order to use this feature, you must grant draw over other apps permission to the application.\nThis permission will only be used to keep the screen awake.\n\nDo you want to continue?</string>
    <string name="media_timeout_title">Media Timeout</string>
    <string name="media_timeout_help_title">Media Timeout Help</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="enable_auto_off">Enable Auto-Off</string>
    <string name="special_use_explanation">This service is required for the application to work properly.</string>
    <string name="no_saved_times">No Saved Times</string>
    <string name="delete">Delete</string>
    <string name="select_time">Select Time</string>
    <string name="switch_to_clock">Switch to Clock</string>
    <string name="switch_to_timeout">Switch to Timer</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="switch_timepicker_mode">Switch to %1$s</string>
    <string name="clock_input">Clock Picker</string>
    <string name="digital_input">Digital Input</string>
    <string name="twelve_hour">12hr</string>
    <string name="twenty_four_hour">24hr</string>
    <string name="select">Select</string>
    <string name="start">Start</string>
    <string name="invalid_time_selected">Invalid time selected</string>
    <string name="service_start_failed">Couldn\'t start right now, try again from the app</string>
    <string name="update_notice_title">A Quick Note</string>
    <string name="update_notice_description">Hey! I\'m sorry if you have experienced crashes recently. This application is a work in progress and also a learning experience for me, and I did some major under the hood changes recently. I\'ll be checking crashes and fixing them as quickly as I can! Thanks again for using this!</string>
</resources>
